[FIX] web: fix footer button alignement in listview dialog

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -475,3 +475,7 @@
         margin: auto 0;
     }
 }
+
+.modal-footer .o_list_selection_box {
+    margin-bottom: 0rem !important;
+}
